# distribicom

./: .gitignore  CMakeLists.txt  README.md  deps.sh  design  design.md  tvd
.github/workflows/: basic_run.yml  cmake.yml  fast_basic_run.yml  fast_test.yml  fast_test_debug  greetings.yml
dependencies/: FetchDependencies.cmake  FetchGRPC.cmake  FetchSeal.cmake  FetchSealPIR.cmake
example/: README.md  pir_configs.json  run_server.sh  run_worker.sh
playground/: slurm-18013812.out
remote-compiler/: Dockerfile  deps.sh  seal_rpi.sh
results/: bandwidth_graph.py  constants.py  expansion_time.py  freivalds_times.py  graph1-1m.py  graph1.py  graph2.py  graph3.py  graph4.py  pir_costs.py  probing_time_graph.py  recovery_graph.py  simulated_pir_costs.py  straggler_graph.py  utils.py  worker_runtimes.py
results/1thread/: addra_32_queries  addra_64_queries  singleserverresults  slurm-5416117.out
results/evals/: 2mil-slurm.out
results/evals/1thread/: addra_128_queries  addra_256_queries  addra_32_queries  ignore_sealpir_results  slurm-5416122.out
results/evals/256k/: fpir  fpir-slow  sealpir  server_out_246_workers_246_queries_82x82.slurm  server_out_328_workers_328_queries_82x82.slurm  server_out_410_workers_410_queries_82x82.slurm  server_out_82_workers_82_queries_82x82.slurm  slurm-6252866.out  slurm-6252876.out
results/evals/3rd-graph/: run_sealpir_log.txt  slurm_58_workers_116x116.out
results/evals/4th-graph/65k/: server_out_42_workers_42_queries_42x41.log-100mbi  server_out_42_workers_42_queries_42x41.log-10mbit  server_out_42_workers_42_queries_42x41.log-20mbit  server_out_42_workers_42_queries_42x41.log-40mbit  server_out_42_workers_42_queries_42x41.log-60mbit  server_out_42_workers_42_queries_42x41.log-80mbit
results/evals/65k_size/: fpir  fpir-slow  sealpir
results/evals/expansion-times/: expansion-time-164x164  expansion-time-42x41.out
results/evals/probe_graph/: slurm_15x15.out  slurm_58x58.out
results/evals/probe_graph/252clients/: server_out_242_workers_242_queries_11x10.log2  slurm_116x116.out  slurm_11x10.out1  slurm_21x_21.out  slurm_30x29.out  slurm_42x41.out  slurm_82x82.out
results/evals/scripts_mil_size/: fpir  fpir-slow  sealpir
scripts/: README.md  deps.sh  run_compiler_jonathan.sh
scripts/compile_install_scripts/: deps.sh  run_compiler.sh  run_compiler_debug.sh
scripts/run_scripts/: app_configs_generation.py  distribicom_pb2.py  makefile  run.py  sbatch_run.sh  test_setting.json  test_setting.pb  workers_setup.py
scripts/run_scripts/benchmark_scripts/: check_server.sh  location_configs.json  pc219.json  pc220.json  pc221.json  pir_configs.json  run_bench.sh  run_server.py  run_worker.py  sbatch_run.sh
scripts/run_scripts/previous_work_scripts/: README.md  bench_addra_worker.sh  bench_fastpir.sh  bench_sealpir.sh
src/: CMakeLists.txt  FreivaldsVector.cpp  FreivaldsVector.hpp  distributed_pir.cpp  distributed_pir.hpp  expand.cpp  just_pool.cpp  just_serial.cpp  main.cpp  master.cpp  master.hpp  run_fastpir.cpp  run_sealpir.cpp  scalar_mult_benchmark.cpp  server.cpp  worker.cpp  worker.hpp  worker_benchmark.cpp
src/concurrency/: CMakeLists.txt  README.md  channel.hpp  concurrency.h  counter.cpp  counter.hpp  globals.h  promise.hpp  safelatch.cpp  safelatch.h  threadpool.cpp  threadpool.hpp  waitgroup.cpp  waitgroup.hpp
src/fastpir/: server1.cpp
src/internals/protos/: boot.proto  distribicom.proto
src/manager/: manager.hpp
src/manager/receive_logic/: work_reducer.hpp  work_verifier.hpp
src/manager/send_logic/: work_distributor.cpp
src/marshal/: CMakeLists.txt  local_storage.cpp  local_storage.hpp  marshal.cpp  marshal.hpp
src/math_utils/: CMakeLists.txt  channel.h  evaluator_wrapper.cpp  evaluator_wrapper.h  evaluator_wrapper.hpp  matrix.cpp  matrix.h  matrix_multiplier.cpp  matrix_multiplier.hpp  matrix_multiplier_base.cpp  matrix_multiplier_base.hpp  matrix_operations.cpp  matrix_operations.hpp  matrix_operations.tpp  multiplier.cpp  multiplier.h  query_expander.cpp  query_expander.hpp  query_expander3.cpp
src/network_layer/: CMakeLists.txt
src/old_src/: FreivaldsVector.cpp  FreivaldsVector.hpp  master.cpp  master.hpp  worker.cpp  worker.hpp
src/protos/: boot.proto  distribicom.proto
src/services/: CMakeLists.txt  client_context.cpp  client_context.hpp  client_service.cpp  client_service.hpp  constants.hpp  db.cpp  db.hpp  factory.cpp  factory.hpp  manager.cpp  manager.hpp  manager_workstream.cpp  manager_workstream.hpp  server.cpp  server.hpp  utils.cpp  utils.hpp  worker.cpp  worker.hpp  worker_strategy.cpp  worker_strategy.hpp
src/services/manager/: manager.hpp
src/services/manager/receive_logic/: work_reducer.cpp  work_verifier.cpp
src/services/manager/send_logic/: work_distributor.hpp
test/: CMakeLists.txt  associativity_addition_test.cpp  associativity_mult_test.cpp  db_serialisation_test.cpp  distribute_query_ser_test.cpp  distribute_query_test.cpp  distributed_freivalds_verification_test.cpp  evaluator_wrapper_test.cpp  freivalds_verification_test.cpp  mathematical_properties_test.cpp  matrix_mult_order_test.cpp  matrix_mult_order_test_version_2.cpp  matrix_mult_str_test.cpp  multiplication_slow_utils_test.cpp  multiplication_utils_test.cpp  test_utils.cpp  test_utils.hpp
test/general_tests/: CMakeLists.txt  associativity_addition_test.cpp  associativity_mult_test.cpp  matrix_mult_order_test.cpp  matrix_mult_order_test_version_2.cpp  matrix_mult_str_test.cpp
test/marshal/: CMakeLists.txt  all_functions_test.cpp  basic_test.cpp
test/math_utils/: CMakeLists.txt  async_mat_mult.cpp  benchmark_PIR_step.cpp  benchmarks.cpp  evaluator_wrapper_test.cpp  expansion_speed_test.cpp  frievalds_test.cpp  left_int_vec_multiply.cpp  mempool_test.cpp  mult_benchmark.cpp  multiplication_slow_utils_test.cpp  query_expander_test.cpp  right_vec_multiply.cpp  thrashing_test.cpp  threadpool_test.cpp
test/services/: CMakeLists.txt  client_test.cpp  db_many_reads_test.cpp  work_distribution_test.cpp  worker_test.cpp
util/: CMakeLists.txt  config.h.in  defines.h
(+14 files in other folders)
